--- a/CoreUygulamam/Views/Admin/AdminNavbarPartial.cshtml
+++ b/CoreUygulamam/Views/Admin/AdminNavbarPartial.cshtml
@@ -56,6 +56,9 @@
                 <a href="metrics.html"><i class="fa fa-info"></i> <span class="nav-label">Ayarlar</span>  </a>
             </li>
             <li>
+                <a href="/Admin/AdminRole/Index/"><i class="fa fa-person"></i> <span class="nav-label">Roller</span>  </a>
+            </li>
+            <li>
                 <a href="metrics.html"><i class="fa fa-diamond"></i> <span class="nav-label">Bildirimler</span>  </a>
             </li>
             <li>
